--- a/w7/assignment/style/Abstract.css
+++ b/w7/assignment/style/Abstract.css
@@ -128,6 +128,7 @@ body {
 
 .box_text {
   color: gray;
+  font-size: 20px;
 }
 .box_arrow {
   background-position: center;
@@ -194,4 +195,67 @@ td {
   height: 86.81px;
   background-image: url(../grid.png);
   margin-right: 30px;
+}
+
+.bottom {
+  margin-top: 60px;
+  height: 402px;
+  background-color: black;
+  padding: 48px 30px 60px 30px;
+}
+
+.flex-bottom {
+  display: flex;
+}
+
+.flex-bottom-opt-1 {
+  /* row-gap: 1rem; */
+  display: flex;
+  /* margin-inline: 69px; */
+}
+
+.flex-bottom-opt-2 {
+  margin-left: 69px;
+  margin-bottom: 16px;
+}
+
+.bottom-text {
+  display: flex;
+  margin-inline: auto;
+  max-width: 1440px;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 150%;
+  justify-content: space-between;
+}
+
+h2 {
+  margin: 0 0 16px 0;
+}
+
+h3 {
+  margin: 0%;
+}
+
+.flex-bottom-opt-3 {
+  display: flex;
+  margin-right: 69px;
+  font-size: 20px;
+  flex-direction: column;
+  justify-content: end;
+  line-height: 150%;
+}
+
+.flex-bottom-left {
+  display: flex;
+  column-gap: 5rem;
+}
+
+.bottom-logo {
+  margin-bottom: 20px;
+  width: 30px;
+  height: 30px;
+  background-color: aliceblue;
+  border-radius: 4px;
+  background-image: url(../adobe_logo.png);
 }
