--- a/src/w10/grid-step2/style/card.scss
+++ b/src/w10/grid-step2/style/card.scss
@@ -1,59 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :root {
-  --card-m-y: 1rem; // 변수 선언 : 같은 값을 중복으로 사용할때 한번에 바꿔줄 수 있다.
+  --card-m-y: 1rem;
   --card-m-x: 1.5rem;
 }
 
-* {
-  //항상 챙기자
-  box-sizing: border-box;
-}
-
-body {
-  //기본값 설정
-  margin: 0;
+.card {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 1.125rem;
   font-weight: 400;
   line-height: 150%;
-  color: oklch(0.3 0 0);
-  background-color: oklch(0.9 0 0);
-  overflow-x: hidden;
-}
-
-p {
-  //p태그 마진 없애주기
-  margin-block: 0;
-}
-
-img {
-  display: block;
-}
-
-.section {
-  > h2 {
-    text-align: center;
-  }
-}
-
-.container {
-  max-width: 60rem;
-  padding: 5rem;
-  margin-inline: auto;
-  background-color: oklch(0.95 0 0);
-}
-
-.card {
-  margin-top: 2rem; //카드끼리 띄우기
+  //margin-top: 2rem;
   background-color: oklch(1 0 0);
   border: 1px solid oklch(0.5 0 0);
   border-radius: 0.75rem;
-
   .section--opt-pos-rel & {
-    //position 배우기
     position: relative;
-
     &:nth-child(1) {
       left: 1rem;
     }
@@ -74,7 +36,6 @@ img {
       top: -40rem;
     }
   }
-
   .section--opt-margin-negative & {
     margin-top: -10rem;
     position: relative;
@@ -82,13 +43,13 @@ img {
       margin-top: 0;
     }
     // &:nth-child(1) {
-    //   z-index: 4;
+    //   z-index: 1;
     // }
     // &:nth-child(2) {
-    //   z-index: 4;
+    //   z-index: 2;
     // }
     // &:nth-child(3) {
-    //   z-index: 4;
+    //   z-index: 3;
     // }
     // &:nth-child(4) {
     //   z-index: 4;
@@ -96,16 +57,13 @@ img {
     // &:nth-child(5) {
     //   z-index: 5;
     // }
-    @for $i from 1 through 5 {
-      //for문. 반복해준다.
+    @for $i from 1 through 100 {
       &:nth-child(#{$i}) {
-        z-index: #{$i}; // 앞으로 가져오기(레이어 위에 쌓는 것처럼)
-        //z값을 설정하려면 항상 position-relative여야한다.
+        z-index: #{$i};
       }
     }
   }
   &:nth-child(1) {
-    //첫번쨰 카드는 위 안띄우기
     margin-top: 0;
   }
   &__top {
@@ -114,14 +72,11 @@ img {
   }
   &__middle {
     width: 100%;
-    aspect-ratio: 4 / 3; //비율을 부모에 맞춰라
-    object-fit: cover; // 잘라서 보여준다.
-    // object-fit: contain; 주어진 칸 안에서 안잘리게 보여준다.작아질수도 있다.
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
   }
   &__bottom {
     padding-block: var(--card-m-y);
-    // card라는 변수를 선언해서 위의 card와 같은 값을 공유하게 된다.
-    //--는 무조건 붙여줘야한다. -m(margin)-y(위아래)
     padding-inline: var(--card-m-x);
   }
   &__author {
@@ -138,10 +93,9 @@ img {
     color: oklch(0.5 0 0);
   }
   &__desc {
-    // 텍스트가 넘치면 끝에 ... 처리 해주기
-    display: -webkit-box; //
-    overflow: hidden; //넘치면 안보여주게 해준(필수)
-    -webkit-line-clamp: 3; //3이면 3중 보여준다
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
   }
   &--type-new {
@@ -150,15 +104,15 @@ img {
       top: -12px;
       right: -12px;
       content: "N";
-      width: 1lh; //line height 의 약자//calc는 계산하라는 의미(작동안할 경우를 대비)
-      display: block;
-      aspect-ratio: 1/1;
+      height: 1lh;
+      aspect-ratio: 1 / 1;
       font-size: 0.875rem;
       color: #fff;
-      background-color: #ff0000;
+      display: block;
       font-weight: 600;
-      border-radius: 9999px;
       text-align: center;
+      background-color: #ff0000;
+      border-radius: 624.9375rem;
     }
   }
   &--pos-rel {
