--- a/src/w10/assignment/style/style.css
+++ b/src/w10/assignment/style/style.css
@@ -223,6 +223,8 @@ body {
 }
 
 .bottom_cat {
+  max-width: 1250px;
+  margin-inline: auto;
   display: grid;
   padding-top: 80px;
   -moz-column-gap: 1.5rem;
@@ -232,6 +234,8 @@ body {
 }
 
 .bottom_info {
+  max-width: 1250px;
+  margin-inline: auto;
   margin-top: 50px;
   display: flex;
   justify-content: space-between;
