--- a/src/w10/assignment/style/style.scss
+++ b/src/w10/assignment/style/style.scss
@@ -223,6 +223,14 @@ body {
   font-size: 20px;
 }
 
+.subtitle2 {
+  color: rgb(16, 40, 75);
+  font-family: "Armin_Grotesk_regular";
+  grid-column: 1/-1;
+  display: flex;
+  font-size: 20px;
+}
+
 .bottom {
   height: 730px;
   margin-top: 96px;
