--- a/src/w11/style/style.scss
+++ b/src/w11/style/style.scss
@@ -61,8 +61,11 @@ body {
       &:hover {
         background-color: unset;
         color: oklch(1 0 150);
-        animation-name: "rainbow";
-        animation-duration: 5000ms; //keyframe은 duration지정도 필요하다.
+        animation-direction: alternate;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 4;
+        animation-name: rainbow;
+        animation-duration: 500ms; //keyframe은 duration지정도 필요하다.
         //animation-fill-mode : backward,forward등이 있다.
         //animation-direction:alternate 도 있다.
       }
@@ -77,15 +80,16 @@ body {
     transform: translate(0rem, 0rem);
   }
   25% {
-    transform: translate(0rem, 0rem);
+    transform: translate(1rem, 0rem);
   }
   25% {
-    transform: translate(0rem, 0rem);
+    transform: translate(1rem, 1rem);
   }
   25% {
-    transform: translate(0rem, 0rem);
+    transform: translate(0rem, 1rem);
   }
   100% {
     background-color: oklch(0.5 0.2 240);
+    transform: translate(0rem, 0rem);
   }
 }
